--- a/index.ejs
+++ b/index.ejs
@@ -20,7 +20,11 @@
     </div>
     <div>
       <h1>Feed</h1>
-      
+      <% for (var i = 0; i < messages.length; i++) { %>
+      <div><%= messages[i].name %>
+      <%= messages[i].message %>
+      <%= messages[i].time %></div>
+      <% } %>
     </div>
   <% } else { %>
     <div>
