--- a/sign-up-form.ejs
+++ b/sign-up-form.ejs
@@ -1,24 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
-  <h1>Sign Up</h1>
-  <form action="" method="POST">
-    <label for="username">Username</label>
-    <input name="username" placeholder="username" type="text" />
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Members Only - Register</title>
+  </head>
+<body class="text-center">
+  <h1 class="my-5">Sign Up</h1>
+  
+  <form class=" w-50 mx-auto" action="" method="POST">
 
-    <label for="password">Password</label>
-    <input name="password" type="password" />
-    <label for="passwordConfirmation">Confirm Password</label>
-    <input name="passwordConfirmation" type="password" />
+    <div class="d-flex flex-row align-items-center mb-4">
+      
+      <div class="form-outline flex-fill mb-0">
+        <input type="text" id="form3Example1c" class="form-control" name="fullname"/>
+        <label class="form-label" for="form3Example1c">Full Name</label>
+      </div>
+    </div>
 
+    <div class="d-flex flex-row align-items-center mb-4">
+      
+      <div class="form-outline flex-fill mb-0">
+        <input type="text" id="form3Example3c" class="form-control" name="username"/>
+        <label class="form-label" for="form3Example3c">Username</label>
+      </div>
+    </div>
 
-    <input type="checkbox" id="isAdmin" name="isAdmin" value="isAdmin">
-    <label for="isAdmin"> Are you an admin?</label><br>
-    <button>Sign Up</button>
+    <div class="d-flex flex-row align-items-center mb-4">
+      
+      <div class="form-outline flex-fill mb-0">
+        <input type="password" id="form3Example4c" class="form-control" name="password"/>
+        <label class="form-label" for="form3Example4c">Password</label>
+      </div>
+    </div>
+
+    <div class="d-flex flex-row align-items-center mb-4">
+      
+      <div class="form-outline flex-fill mb-0">
+        <input type="password" id="form3Example4cd" class="form-control" name="passwordConfirmation"/>
+        <label class="form-label" for="form3Example4cd">Confirm password</label>
+      </div>
+    </div>
+
+    
+
+    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+      <button class="btn btn-primary btn-lg">Register</button>
+    </div>
+
   </form>
 </body>
 </html>
